k8/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ww-balancer
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - 'example.org'
      secretName: renderer-kubernetes-tls
  rules:
    - host: 'example.org'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: wwrenderer
                port:
                  number: 80
